# agency-subscription-hub

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.base.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d2cd997fdb65_add_domain_tables.py  e0d697b31a1a_add_users_table.py  f8e2a1b3c9d7_add_checkout_token_to_clients.py
backend/app/: main.py  resources.py
backend/app/admin/: contracts.py  factory.py  handlers.py
backend/app/api/: auth.py  checkout.py  router.py  users.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/integrations/efi/: __init__.py  client.py  exceptions.py  schemas.py
backend/app/models/: __init__.py  audit_log.py  client.py  payment.py  plan.py  recipient.py  split_config.py  user.py  webhook_event.py
backend/app/schemas/: audit_log.py  checkout.py  client.py  payment.py  plan.py  recipient.py  split_config.py  user.py
backend/app/services/: checkout.py  client.py  user.py
backend/tests/: conftest.py  test_async_simple.py  test_auth.py  test_escape_hatches.py  test_factory.py  test_resources.py  test_security.py  test_user_service.py
backend/tests/integrations/efi/: test_client.py  test_schemas.py
docs/: admin-panel-plan.md  admin-panel.md  efi-subscription.md  efi.md  stack.md  system-description.md  ui-components.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
nginx/: nginx.conf
(+70 files in other folders)
